Create dist version, with run script and user guide